# gcc_obj_sample

./: build.sh  calc.h  calc_func_add.c  calc_func_div.c  calc_test.c  calc_test.h  clear.sh  main.c
algo_sample/: CMakeLists.txt  b.sh  b_x64.sh
algo_sample/algocaller/: CMakeLists.txt  main.c  mymem.c
algo_sample/libalgo/: CMakeLists.txt  b_x64.sh  foo.cpp  foo.hpp  func_warp.c  func_warp.h  libalgo.c  runtime.cpp  runtime.h
algo_sample/libalgo/libalgo/: b.sh
algo_sample/libalgo/public/: algo.h
android/: build.sh  clear.sh
android/jni/: Android.mk  Application.mk
android/jni/inc/: calc.h  calc_test.h  data.h
android/jni/src/: calc_test.c  main.c
aosp_elfapp/: Android.mk
aosp_elfapp/inc/: calc.h  calc_test.h
aosp_elfapp/src/: calc_test.c  main.c
linux_x86_64/: CMakeLists.txt  build.sh  build_exe.sh  calc.c  calc.h  calc_func_mul.c  calc_func_sub.c  data.S  data.h  main.c
